src/css/ng-ripple.css
.ripple-cont{
	position: relative;
	display: inline-block;
	border-radius: 2px;
	min-height: 36px;
	line-height: 36px;
	min-width: 88px;
	text-transform: uppercase;
	background-color: transparent;
	cursor: pointer;
	margin: 0;
	padding: 0 6px;
	border: 0;
	outline: 0;
	font-size: 1em;
	box-sizing: border-box;
	-webkit-appearance: none;
	-moz-appearance: none;
	text-decoration: none;
	color: rgba(0,0,0,.87);

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);

	-webkit-transition: all .3s;
	-moz-transition: all .3s;
	transition: all .3s;
}

.ripple-cont:not(.r-int-disabled):hover{
	background-color: rgba(158,158,158,0.2);
}
.ripple-cont:not(.r-int-disabled):active{
	background-color: rgba(158,158,158,0.3);
}

.ripple-cont.r-round{
    min-width: 56px;
    min-height: 56px;
    line-height: 56px;
}

.ripple-cont.r-icon{
	padding: 8px;
	line-height: 1;
	min-height: 15px;
	min-width: 15px;
	background-color: transparent;
}

.ripple-cont.r-raised{
	background-color: #fff;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
}
.ripple-cont.r-raised:not(.r-int-disabled,.disabled):active{
	box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
}
.ripple-cont.r-round,.ripple-cont.r-round .ripple-cont,.ripple-cont.r-round .ink-content{
	border-radius: 50%;
	overflow: hidden;
}

.ripple-cont.disabled{
	color: rgba(0,0,0,0.26) !important;
    cursor: default;
	background: transparent;
	box-shadow: none;
}
.ripple-cont.r-raised.disabled{    
	background-color: rgba(0,0,0,0.12) !important;
	box-shadow: none;
}
.ripple-cont .ripple-content{
	position: relative;
	z-index: 2;
	display:inline-block;
}
.ripple-cont .ink-content{
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	z-index: 1;
	width: 100%;
	background-clip: padding-box;
	overflow: hidden;
	-moz-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
	-o-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
	-webkit-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
	mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
	border-radius: 2px;
}
.ink-content .ink {
	display: block; position: absolute;
	background: rgb(0,0,0);
	border-radius: 100%;
	z-index: 10;
	opacity: 0;
    -webkit-transform: translate(-50%,-50%) scale(0);
    -moz-transform: translate(-50%,-50%) scale(0);
    transform: translate(-50%,-50%) scale(0);
}
.ripple-cont.r-icon .ink{
	top: 50%;
	left: 50%;
}
.ink-content .ink.animate {
    -webkit-transform: translate(-50%,-50%) scale(1);
    -moz-transform: translate(-50%,-50%) scale(1);
    transform: translate(-50%,-50%) scale(1);
    -webkit-transition: all .75s cubic-bezier(0.25, 0.8, 0.25, 1);
    -moz-transition: all .75s cubic-bezier(0.25, 0.8, 0.25, 1);
    transition: all .75s cubic-bezier(0.25, 0.8, 0.25, 1);
}

